Fix ECSDeployer